--- a/messenger-frontend/src/index.css
+++ b/messenger-frontend/src/index.css
@@ -1,6 +1,6 @@
 body {
-    height: 100%;
-    width: 100%;
+    height: 100vh;
+    /*width: 100%;*/
     overflow: hidden;
     display: flex;
     flex-direction: column;
@@ -13,7 +13,7 @@ body {
 .container {
     display: flex;
     flex-grow: 1;
-    height: 50%;
+    height: 50vh;
 }
 
 header {
@@ -64,8 +64,16 @@ aside {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
+    /*justify-content: space-around;*/
     /*flex-wrap: wrap;*/
     align-content: flex-start;
+    /*align-content: space-around;*/
+}
+
+.side-menu-elem {
+    margin:  2px;
+    padding: 1em 2em;
+    background: aliceblue;
 }
 
 .message {
