--- a/src/signin.css
+++ b/src/signin.css
@@ -1,40 +1,42 @@
-/*
-html, body {
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding-top: 40px;
-  padding-bottom: 40px;
-  background-color: #f5f5f5;
-}*/
+.center-page {
+  display: grid;
+  grid-template-rows: auto 330px auto;
+  grid-template-columns: auto 330px auto;
+  grid-column-gap: 30px;
+  grid-row-gap: 30px;
+
+  grid-template-areas:
+    ". . . "
+    ". form ."
+    ". . . ";
+}
 
 .form-signin {
+  grid-area: form;
   width: 100%;
-  width: 330px;
-  padding: 15px;
-  margin: auto;
-}
-.form-signin .checkbox {
-  font-weight: 400;
-}
-.form-signin .form-control {
-  position: relative;
-  box-sizing: border-box;
-  height: auto;
-  padding: 10px;
+  align-self: center;
   font-size: 16px;
 }
+
 .form-signin .form-control:focus {
   z-index: 2;
 }
-.form-signin input[type="email"] {
+
+.form-signin input {
   margin-bottom: -1px;
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
-}
-.form-signin input[type="password"] {
-  margin-bottom: 10px;
-  border-top-left-radius: 0;
   border-top-right-radius: 0;
+  border-top-left-radius: 0;
+}
+
+.form-signin input:first-of-type {
+  border-top-left-radius: 3px;
+  border-top-right-radius: 3px;
+}
+
+.form-signin input:last-of-type {
+  margin-bottom: 10px;
+  border-bottom-right-radius: 3px;
+  border-bottom-left-radius: 3px;
 }
