Can send messages

--- a/messenger-frontend/src/index.css
+++ b/messenger-frontend/src/index.css
@@ -33,7 +33,15 @@ footer {
 }
 
 main {
+    height: 50vh;
+    display: flex;
+    flex-direction: column;
+}
+
+.messages {
     overflow-y: scroll;
+    display: flex;
+    flex-direction: column;
 }
 
 aside {
