--- a/src/containers/App.css
+++ b/src/containers/App.css
@@ -1,2 +1,13 @@
 .App {
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    width: 100%;
+    height: 100%;
+}
+
+.wrapper {
+    display: flex;
+    flex-direction: row;
+    flex-grow: 1;
 }
