--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,7 +1,11 @@
-Header {
+.Header {
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
     min-height: 60px;
     padding: 0 0 0 30px;
+}
+
+.Header__title {
+    margin: auto 0;
 }
