--- a/messenger-frontend/src/index.css
+++ b/messenger-frontend/src/index.css
@@ -3,7 +3,6 @@ body {
     overflow: hidden;
     display: flex;
     flex-direction: column;
-    min-height: 100vh;
     max-height: available;
     margin: 0;
     padding: 0;
@@ -12,7 +11,6 @@ body {
 .container {
     display: flex;
     flex-grow: 1;
-    height: 50vh;
 }
 
 header {
@@ -20,10 +18,11 @@ header {
     color: white;
     font-size: 16px;
     font-family: Arial, Helvetica, sans-serif;
-    padding: 40px;
+    padding: 20px;
     display: flex;
-    align-items: baseline;
+    align-items: center;
     justify-content: space-between;
+    height: 15vh;
 }
 
 footer {
@@ -33,13 +32,14 @@ footer {
 }
 
 main {
-    height: 50vh;
+    height: 75vh;
     display: flex;
     flex-direction: column;
 }
 
 .messages {
     overflow-y: scroll;
+    width: 55vw;
     display: flex;
     flex-direction: column;
 }
@@ -63,7 +63,8 @@ aside {
 }
 
 .side-menu {
-    width: 20rem;
+    width: 30vw;
+    /*max-width: 30vw;*/
     background: lightskyblue;
     flex-grow: 1;
     display: flex;
@@ -76,6 +77,7 @@ aside {
 }
 
 .side-menu-elem {
+    /*max-width: 30rem;*/
     margin:  2px;
     padding: 1em 2em;
     background: aliceblue;
@@ -93,11 +95,28 @@ aside {
 }
 
 .message-username {
+    width: 10vw;
     align-self: center;
-    padding-right: 5em;
+    /*padding-right: 2rem;*/
 }
 
 .message-text {
     align-self: center;
-    padding-right: 5em;
+    padding-right: 2rem;
+    padding-left: 2rem;
+}
+
+.link-button {
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    text-decoration: underline;
+    display: inline;
+    margin: 0;
+    padding: 0;
+}
+
+.link-button:hover,
+.link-button:focus {
+    text-decoration: none;
 }
