добавил поиск и частично выбор чат комнаты

--- a/messenger/src/components/Chat/Chat.css
+++ b/messenger/src/components/Chat/Chat.css
@@ -4,11 +4,12 @@ img {
 .mesgs {
   float: left;
   padding: 30px 15px 0 25px;
-  width: 60%;
+  width: 70%;
 }
 .inbox-people {
   background: #f8f8f8 none repeat scroll 0 0;
   float: left;
   overflow: hidden;
-  width: 40%; border-right:1px solid #c4c4c4;
+  width: 30%; 
+  border-right:1px solid #c4c4c4;
 }
