--- a/messenger/src/components/Chat/SearchPanel/SearchPanel.css
+++ b/messenger/src/components/Chat/SearchPanel/SearchPanel.css
@@ -1,5 +1,6 @@
-.headind-srch { 
-    padding:10px 29px 10px 20px; 
+.headind-srch {
+    height: 7vh;
+    padding:2vh 29px 10px 20px; 
     overflow:hidden; 
     border-bottom:1px solid #c4c4c4;
 }
