--- a/messenger/src/components/Chat/MessageList/MessageList.css
+++ b/messenger/src/components/Chat/MessageList/MessageList.css
@@ -1,5 +1,9 @@
+.msg-list {
+    position: relative;
+}
 .msg-history {
     height: 79vh;
+    padding: 0px 20px 0px 20px;
     overflow-y: auto;
 }
 .msg-header {
@@ -7,4 +11,15 @@
     padding: 2vh 0px 0px 20px; 
     overflow:hidden; 
     border-bottom:1px solid #c4c4c4;
+}
+.msg-bottom-btn {
+    background: #05728f none repeat scroll 0 0;
+    border: medium none;
+    border-radius: 50%;
+    color: #fff;
+    position: absolute; 
+    font-size: 17px;
+    height: 33px;
+    bottom: 30px; /* Положение от нижнего края */
+    right: 30px; /* Положение от правого края */
 }
