--- a/messenger/src/App.css
+++ b/messenger/src/App.css
@@ -20,18 +20,23 @@
     position:relative;
     width: 100%;
     height: 50%;
-    background-color:blue;
 }
 
 .FiledToFill {
     margin-left: 13%;
     position:relative;
+    outline: none;
     width: 70%;
     height: 30%;
-    background-color:yellow;
+    background-color: #212121 !important;
+    border-left-style: none;
+    border-right-style: none;
+    border-top-style: none;
+    border-bottom-color: #03a9f4;
 }
 
 .Go {
+    outline: none;
     margin-left: 30%;
     position:relative;
     width: 40%;
