--- a/messenger/src/App.css
+++ b/messenger/src/App.css
@@ -10,10 +10,14 @@
 .ChatRoom {
     background-color: #212121 !important;
     /*От всего экрана*/
-    height: 100%;
-    width: 100%;
+    height: 80%;
+    width: 70%;
     margin: auto;
     position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
 }
 
 .Main {
@@ -71,6 +75,4 @@ h1 {
 body {
   background:url("https://images.pexels.com/photos/709552/pexels-photo-709552.jpeg?cs=srgb&dl=beautiful-daylight-environment-709552.jpg&fm=jpg")no-repeat;
   background-size:cover;
-
-
 }
