--- a/src/Register.css
+++ b/src/Register.css
@@ -25,13 +25,14 @@
 .login h2{
     text-align: center;
     margin-top: 0;
-    margin-bottom: 10px;
+    margin-bottom: 0px;
 }
 
 .form-item{
     font-family: 'Raleway', sans-serif;
     padding: 5px;
-    margin-bottom: 1rem;
+    margin-top: 1.5rem;
+    margin-bottom: 0rem;
     height: 30px;
     width: 16rem;
     border: 1px solid grey;
@@ -39,6 +40,8 @@
 
 .form-submit{
     font-family: 'Raleway', sans-serif;
+    margin-top: 1.5rem;
+    margin-bottom: 0rem;
     height: 35px;
     color: #fff;
     background-color: #1abc9c;
