--- a/vmessengere/src/App.css
+++ b/vmessengere/src/App.css
@@ -10,7 +10,7 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 10vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -23,6 +23,16 @@
   color: #61dafb;
 }
 
+.Chat {
+  overflow-y: scroll;
+  overflow-x: hidden;
+  height: 400px;
+}
+
+body {
+  background-color: grey;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -30,4 +40,47 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.HolyGrail {
+  display: flex;
+  height: 100%; /* 1, 3 */
+  flex-direction: column;
+}
+
+.HolyGrail,
+.HolyGrail-body {
+  display: flex;
+  flex-direction: column;
+}
+
+.HolyGrail-nav {
+  order: -1;
+}
+
+@media (min-width: 768px) {
+  .HolyGrail-body {
+    flex-direction: row;
+    flex: 1;
+  }
+  .HolyGrail-content {
+    flex: 1;
+  }
+  .HolyGrail-nav, .HolyGrail-ads {
+    /* 12em is the width of the columns */
+    flex: 0 0 12em;
+  }
+}
+
+.Login {
+  width: 150px;
+  display: inline-block
+}
+
+.SignUp {
+  display: inline-block;
+}
+
+.Btn-LogOut {
+  display: inline-block;
 }
