--- a/messenger/src/css/app.scss
+++ b/messenger/src/css/app.scss
@@ -1,3 +1,4 @@
+@import 'font';
 @import "https://fonts.googleapis.com/css?family=Roboto:400,700";
 @import 'variable';
 
@@ -24,15 +25,34 @@ body{
 		display: flex;
 		height: $header-height;
 		border-bottom: 1px solid $border-color;
-		.left{
-			width: $left-sidebar-width;
-			.actions{
-				line-height: $header-height;
-				padding: 0 10px;
-				button{
-				}
-			}
-		}
+      .left{
+        width: $left-sidebar-width;
+        position: relative;
+        .left-action{
+          position: absolute;
+          left: 8px;
+          top: 0;
+        }
+        .right-action{
+          position: absolute;
+          right: 8px;
+          top: 0;
+        }
+        h2{
+          line-height: $header-height;
+          font-size: 20px;
+          font-weight: 600;
+          display: block;
+          text-align: center;
+        }
+        button{
+          background: none;
+          line-height: $header-height;
+          border: 0 none;
+          font-size: 20px;
+          cursor: pointer;
+        }
+      }
 		.content{
 			flex-grow: 1;
 			h2{
@@ -71,6 +91,7 @@ body{
 			border-right: 1px solid $border-color;
 		}
 		.content{
+            max-width: 60%;
 			flex-grow: 1;
 			overflow: hidden;
 			display: flex;
@@ -89,6 +110,7 @@ body{
 						width: 100%;
 						height: $messenger-input-height;
 						border: 0 none;
+                        font-size: 14px;
 					}
 				}
 				.actions{
@@ -112,47 +134,67 @@ body{
 .messages{
 	display: flex;
 	flex-direction: column;
+    //justify-content: flex-end;
 	overflow-y: auto;
 	height: 100%;
 	.message{
-		display: flex;
-		flex-direction: row;
-		justify-content: flex-end;
-		margin: 15px;
-		padding: 20px;
-		.message-user-image{
-			img{
-				width: 20px;
-				height: 20px;
-				border-radius: 50%;
-			}
-		}
-		.message-body{
-			padding-left: 10px;
-			.message-author{
+		//display: flex;
+		//flex-direction: row;
+		//justify-content: flex-end;
+        //text-align: end;
+		//margin: 20px;
+		padding: 10px;
+        align-self: end;
 
+
+		.message-body{
+            display: flex;
+            padding-left: 10px;
+            .message-user-image{
+                float: left;
+                img{
+                  width: 30px;
+                  height: 30px;
+                  border-radius: 50%;
+                }
+            }
+			.message-author{
+              padding-left: 10px;
 			}
+            .time{
+              padding-left: 10px;
+              font-size: 10px;
+            }
 			.message-text{
-				background: $body-color;
-				color: #FFF;
-				padding: 10px;
-				border-radius: 10px;
+                  padding-left: 10px;
+                  border:solid;
+                  background: $body-color;
+                  color: #FFF;
+                  padding: 10px;
+                  border-radius: 10px;
+                  font-size: 14px;
 			}
 		}
 
 		&.me{
-			justify-content: flex-start;
+			//justify-content: flex-start;
+            text-align: start;
+            float: right;
 			.message-body{
 				.message-text{
 					background: $primary-color;
 				}
+
 			}
 		}
 	}
 }
 
 .channels{
+	overflow-y: auto;
+	height: 100%;
 	.channel{
+		cursor: pointer;
 		display: flex;
 		border-bottom: 1px solid $border-color;
 		padding: 5px 0;
@@ -168,38 +210,196 @@ body{
 			flex-grow: 1;
 			padding-left: 10px;
 			h2{
-				font-size: 14px;
+				font-size: 16px;
 			}
-			p{
-				font-size:10px;
-			}
+            .time{
+              float: right;
+              font-size:10px;
+            }
+            .bottom{
+              display: flex;
+              .author{
+                &.me{
+                  border:solid;
+                  background: $primary-color;
+                  color: #FFF;
+                  padding-left: 2px;
+                  border-radius: 5px;
+                  font-size:12px;
+                }
+              }
+
+              p{
+                border: 4px solid rgba(0, 0, 0 , 0.01);
+                border-radius: 5px;
+                font-size:12px;
+              }
+            }
+
+
+		}
+		&.active{
+			background: rgba(0, 0, 0, 0.05);
+			//border: 3px solid $primary-color;
 		}
 	}
 }
 
-.members{
-	.member{
-		display: flex;
-		border-bottom: 1px solid $border-color;
-		padding: 5px 0;
-		.member-image{
-			padding-left: 8px;
-			img{
-				width: 30px;
-				height: 30px;
-				border-radius: 50%;
-				margin-top: 10px;
-			}
-		}
-		.member-info{
-			flex-grow: 1;
-			padding-left: 10px;
-			h2{
-				font-size: 14px;
-			}
-			p{
-				font-size:10px;
-			}
-		}
-	}
+.toolbar{
+  height: $header-height;
+  display: flex;
+  flex-direction: row;
+  position: relative;
+  label{
+    line-height: $header-height;
+  }
+  input{
+    height: 30px;
+    line-height: 30px;
+    margin-top: 10px;
+    border: 0 none;
+  }
+  .search-user{
+    min-width: 180px;
+    position: absolute;
+    left: 0;
+    top: $header-height;
+    z-index: 1;
+    border: 1px solid $border-color;
+    border-top: 0 none;
+    .user-list{
+      display: flex;
+      flex-direction: column;
+      .user{
+        display: flex;
+        flex-direction: row;
+        padding: 5px;
+        border-bottom: 1px solid $border-color;
+        background: #FFFFFF;
+        cursor: pointer;
+        img{
+
+          width: 30px;
+          height: 30px;
+          border-radius: 50%;
+          margin-top: 10px;
+        }
+        h2{
+          padding-left: 8px;
+          flex-grow: 1;
+          font-size: 14px;
+        }
+      }
+    }
+  }
+}
+
+.user-bar{
+  position: relative;
+  button.login-btn{
+    height: $header-height;
+    border: 0 none;
+    background: none;
+    color: $primary-color;
+    font-weight: 600;
+    font-size: 14px;
+  }
+  .user-form{
+    background: #FFF;
+    box-shadow: -1px 1px 1px rgba(0, 0, 0, 0.09);
+    position: absolute;
+    top: $header-height;
+    right: 0;
+    border: 1px solid $border-color;
+    border-top: 0 none;
+    padding: 10px;
+    .form-item{
+      label{
+        line-height: 30px;
+        min-width: 75px;
+        text-align: right;
+        margin-right: 8px;
+      }
+      input[type="login"],input[type="password"], input[type="text"]{
+
+        height: 30px;
+        line-height: 30px;
+
+      }
+    }
+    .form-actions{
+      display: flex;
+      flex-direction: row;
+      justify-content: flex-end;
+    }
+  }
+  .profile-name{
+    font-size: 16px;
+  }
+  .user-menu{
+    background: #FFF;
+    box-shadow: -1px 1px 1px rgba(0, 0, 0, 0.09);
+    min-width: 200px;
+    position: absolute;
+    right: 0;
+    top: $header-height;
+    border: 1px solid $border-color;
+    border-top: 0 none;
+    ul{
+      padding: 0;
+      margin: 0;
+      list-style: none;
+      li{
+        border-top: 1px solid $border-color;
+        padding: 8px;
+        button{
+          background: none;
+          border: 0 none;
+          display: block;
+          cursor: pointer;
+          text-align: center;
+          width: 100%;
+        }
+        &:hover{
+          background: rgba(0, 0, 0, 0.09);
+        }
+      }
+    }
+  }
+}
+.form-item{
+  display: flex;
+  margin-bottom: 10px;
+  label{
+    font-weight: 600;
+  }
+  input[type="login"],input[type="password"], input[type="text"]{
+    border: 1px solid $border-color;
+    padding: 3px 8px;
+  }
+}
+.form-actions{
+  button{
+    border: 0 none;
+    padding: 7px 15px;
+    text-align: center;
+    &.primary{
+      background: $primary-color;
+      color: #FFF;
+    }
+  }
+}
+.app-message{
+  line-height: 1.5em;
+  padding: 10px;
+  font-size: 12px;
+  text-align: center;
+  border: 1px solid $primary-color;
+  border-radius: 5px;
+  margin: 0 0 10px 0;
+  &.error{
+    background: $danger-color;
+    color: #FFF;
+    border-color: $danger-color;
+  }
 }
